tests/snapshots/compile_file__cyclic_dup.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/cyclic_dup.hvm
---
Unbound variable 'y1'
