tests/snapshots/compile_file__def_pat_unscoped.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/def_pat_unscoped.bend
---
@add = ($([+] $(a b)) (a b))

@main = a
  & @add ~ (9 (4 a))
