tests/snapshots/compile_file__double_main.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/double_main.hvm
---
File has both 'Main' and 'main' definitions
