tests/snapshots/compile_file__dup_apply.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/dup_apply.bend
---
@main = ({(a b) a} b)
