tests/snapshots/compile_file__dup_apply.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/dup_apply.hvm
---
@main = ({(a b) a} b)
