tests/snapshots/compile_file__dup_global_lam.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/dup_global_lam.bend
---
@main = d
  & ({(b c) b} (a a)) ~ (c d)
