tests/snapshots/compile_file__elif.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/elif.bend
---
@main = j
  & $(2 ?(((d (e (?(((b (?(((?((0 (* 2)) a) a) (* (* 3))) (b c)) c)) (* (* (* 4)))) (d (e f))) f))) (* (* (* (* 1))))) (g (h (i j))))) ~ [=0x0000001]
  & $(1 g) ~ [<0x0000002]
  & $(2 h) ~ [>0x0000003]
  & $(2 i) ~ [=0x0000002]
