tests/snapshots/compile_file__elif_fun.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/elif_fun.bend
---
@main = j
  & $(2 ?(((?(((?(((?((0 (* 4)) a) a) (* (* 3))) b) b) (* (* (* 2)))) d) d) (* (* (* (* 1))))) (g (h (i j))))) ~ [=0x0000001]
  & $(1 g) ~ [<0x0000002]
  & $(2 h) ~ [>0x0000003]
  & $(2 i) ~ [=0x0000002]
