tests/snapshots/compile_file__elif_no_else.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/elif_no_else.bend
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/compile_file/elif_no_else.bend :
[1m- expected:[0m else or elif
[1m- detected:[0m end of input
[0m  6 | [4m[31m [0m
